--- a/main.tex
+++ b/main.tex
@@ -1059,40 +1059,35 @@ $$\sum_{v\in V} \deg(v)=2|E|=2m$$
 
 \subsubsection{Runtimes of Adjacency matrix and Adjacency List}
 The big difference between the adjacency matrix and the adjacency list is in the operations that are carried out. The following table shows how long it takes to perform each interaction or operation on the corresponding list or matrix:
-   \begin{table}[h]
-        \centering
-        \begin{tabular}{c|c|c}
-            \textbf{Operation}    & 
-            \textbf{Matrix}    & 
-            \textbf{List}    \\
-     
-            \hline
-            Find all neighbours of $v$ &
-            $\Theta(n)$ &
-            $\Theta(deg_{out}(v))$ \\
 
-            Find $v \in V$ without neighbours &
-            $\mathcal{O}(n^2)$ &
-            $\mathcal{O}(n)$ \\
+\begin{table}[h]
+    \centering
+    \begin{tabular}{p{5cm}|p{1.8cm}|p{4.5cm}|p{4.5cm}}
+        \toprule
+        \textbf{Query} & \textbf{Adjacency Matrix} & \textbf{Adjacency List} & \textbf{Improved Adjacency List} \\
+        \midrule
+        (a) Find $deg(v)$ & $\Theta(n)$ & $\Theta(1 + \text{deg}(v))$ & $\Theta(1)$ \\
+        (b) Find a neighbor of $v$ & $\Theta(n)$ & $\Theta(1)$ & $\Theta(1)$ \\
+        (c) Decide if $u$ and $v$ are adjacent & $\Theta(1)$ & $\Theta(1 + \min\{\text{deg}(v), \text{deg}(u)\})$ & $\Theta(1 + \min\{\text{deg}(v), \text{deg}(u)\})$ \\
+        (d) Delete edge $\{u, v\}$ & $\Theta(1)$ & $\Theta(\text{deg}(v) + \text{deg}(u))$ & $\Theta(\min\{\text{deg}(v), \text{deg}(u)\})$ \\
+        (e) Find neighbor $v$ of $u$ and delete $\{u, v\}$ & $\Theta(n)$ & $\Theta(1 + \max \{\text{deg}(w)\})$ & $\Theta(1)$ \\
+        (f) Insert edge $\{u, v\}$ if not exists & $\Theta(1)$ & $\Theta(1 + \min\{\text{deg}(v), \text{deg}(u)\})$ & $\Theta(1 + \min\{\text{deg}(v), \text{deg}(u)\})$ \\
+        (g) Delete vertex $v$ and incident edges & $\Theta(n^2)$ & $\Theta(n + m)$ & $\Theta(n)$ \\
+        (h) Find all neighbour of $v$  & $\Theta(n)$ & $\Theta(\text{deg}_{out}(v))$ &  \\
+        (i) Find $v \in V$ without neighours & $\Theta(n^2)$ & $\mathcal{O}(n)$ &  \\
+        (j) Is $(u,v) \in V$  & $\Theta(1)$ & $\Theta(1)$ & $\Theta(1)$ \\
+        (k) Insert edge & $\Theta(1)$ & $\Theta(\text{deg}_{out}(v))$ & \\
 
-            Is $(u,v) \in V$ ?&
-            $\mathcal{O}(1)$ &
-            $\mathcal{O}(deg_{out}(v))$ \\
+        \bottomrule
 
-            Insert edge &
-            $\mathcal{O}(1)$ &
-            $\mathcal{O}(1)$ \\
 
-            Remove edge &
-            $\mathcal{O}(1)$ &
-            $\mathcal{O}(deg_{out}(v))$ \\
+        
+    \end{tabular}
+    \caption{Query Runtimes in $\Theta$-Notation for Different Representations}
+    \label{tab:runtimes}
+\end{table}
 
-        \end{tabular}
-        \caption{Table shows the runtimes of Operations in matrix and list}
-        \label{tab:RuntimesMatrix and List}
-    \end{table}
-
-    \newpage
+\newpage
     
 \subsection{Overall Data Structures}
 \subsubsection*{Abstrakte Datentypen (ADT)}
