Please see Exercise Sheet 3: We write g ≥ Ω(f) instead of g ∈ Ω(f)

--- a/main.tex
+++ b/main.tex
@@ -230,7 +230,7 @@ Ziel dieses Skriptes ist die Vermittlung eines groben Überblicks über die Vorl
     Die graphische Darstellung der Funktionen im Bild (\ref{fig: WachstumBigO}) zeigt uns leider nur sechs Funktionen. 
     Um möglichst viele Funktionen in aufsteigendem, asymptotischen Wachstum zu sehen, folgende Abbildung:
 
-    $\mathcal{O}(1) \in [\mathcal{O}(\frac{1}{n^2}) \in \mathcal{O}(\frac{1}{n}) \in \ ] \  \mathcal{O}(\log \log n)\in \mathcal{O}(\log n) \in \mathcal{O}(\sqrt{n}) \in \mathcal{O}(n) \in \mathcal{O}(n\log n) \in [\mathcal{O}({n^c}) \in \mathcal{O}(c^n) \in \ ] \mathcal{O}(n^2) \in \mathcal{O}(2^n) \in \mathcal{O}(2^{n^{2}}) \in \mathcal{O}(n!) $
+    $\mathcal{O}(1) \leqslant [\mathcal{O}(\frac{1}{n^2}) \leqslant \mathcal{O}(\frac{1}{n}) \leqslant \ ] \  \mathcal{O}(\log \log n)\leqslant \mathcal{O}(\log n) \leqslant \mathcal{O}(\sqrt{n}) \leqslant \mathcal{O}(n) \leqslant \mathcal{O}(n\log n) \leqslant [\mathcal{O}({n^c}) \leqslant \mathcal{O}(c^n) \leqslant \ ] \mathcal{O}(n^2) \leqslant \mathcal{O}(2^n) \leqslant \mathcal{O}(2^{n^{2}}) \leqslant \mathcal{O}(n!) $
 
 \newpage
 \subsection{Erster Algorithmus} 
